Update setup of learning and content